--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,11 @@ a h4 {
     color:#555;
     text-decoration: none;
 }
-
+.img-responsive{
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
 /*#############################################*/
 /*                  wrapper                    */
 /*#############################################*/
@@ -56,6 +60,7 @@ a h4 {
     width:100%;
 }
 .site-header{
+    position: relative;
     background-color:#FFF;
     min-height: 50px;
     margin-bottom:15px;
@@ -83,22 +88,27 @@ a h4 {
     margin-left:15px;
    
 }
-.site-header ul.main-nav li:first-child{margin-left:0;}
-
-.site-header .site-logo{
-    float:left;
+.site-header ul.main-nav li:first-child {
+    margin-left:0;
 }
+
+
 
 /*sticky header*/
 .sticky {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    padding-bottom:15px;
+    width: 1236px;
+    padding-bottom:5px;
     background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
+    transition:all 500ms ease;
+     opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
 }
 .sticky .main-nav{
     padding-right:15px;
@@ -112,10 +122,16 @@ a h4 {
 /*#############################################*/
 /*                  hero slider              */
 /*#############################################*/
+
 #hero-slider{
-    width:1200px;
+    width:100%;
     height: 796px;
     overflow:hidden;
+}
+
+#hero-slider img{
+    max-width: 100%;
+    height:796px;
 }
 
 #hero-slider .hero-slides{
@@ -184,6 +200,11 @@ a h4 {
 
 
 /*#############################################*/
+/*                modal                        */
+/*#############################################*/
+
+
+/*#############################################*/
 /*                footer                  */
 /*#############################################*/
 .site-footer {
@@ -215,15 +236,18 @@ a h4 {
 .row {
     margin-bottom:15px;
 }
-.row::after{
+.row:after{
     content: "";
-    clear:both;
+    clear: both;
     display: table;
 }
 
 .row-large-4{
     width:100%;
     margin-bottom:15px;
+}
+.row-large-12{
+    width:100%;
 }
 
 .row-gutters > div{
@@ -240,14 +264,20 @@ a h4 {
 /*#############################################*/
 /*small screen*/
 @media(min-width: 530px){
+    
     .row-large-4{
         float:left;
         width:33.33%;
     }
     
+    .row-large-12{
+        width:50%;
+    }
+      
 }
 /*medium screen*/
 @media(min-width: 800px){
+    
     .row-large-1{
         float:left;
         width:8.33%;
