--- a/css/styles.css
+++ b/css/styles.css
@@ -58,23 +58,50 @@ a h4 {
 /*                  header                     */
 /*#############################################*/
 .site-header{
-    border-bottom:3px solid #e7e7e7;
     width:100%;
     position: relative;
-    background-color:#eee;
+    transition: background-color .6s ease-out;
+    -webkit-transition: background-color .6s ease-out;
+    -moz-transition: background-color .6s ease-out;
 }
+@media(min-width:530px){
+    .site-header{
+        background-color: #eee;
+    }
+}
+.site-header-is-expanded{
+    background-color:rgba(112, 201, 242, .8);
+}
+@media(min-width:530px){
+    .site-header-is-expanded {
+        background-color:#eee;
+    }
+}
+.site-header-is-expanded .primary-nav ul li a{
+    color:#0c2b3a;
+}
+.site-header-is-expanded .primary-nav ul li a:hover{
+    color:#1c5a78;
+}
+
 @media(min-width: 800px){
     .site-header{
-        height:15vh;
+        height:5vh;
     }
 }
 
 .primary-nav{
     position: relative;
     margin-bottom:15px;
-    padding-top:10px;
-    margin-top:0;
     font-weight: 300;
+    text-align: center;
+}
+@media(min-width:530px){
+    .primary-nav{
+        margin-top:0;
+        margin-bottom:0;
+        text-align: none;
+    }
 }
 
 .primary-nav ul{
@@ -83,51 +110,137 @@ a h4 {
 }
 
 .primary-nav ul li{
-    float:left;
     margin-left:15px;
+    display: inline-block;
+}
+@media(min-width:530px) {
+   .primary-nav ul li {
+       float:left;
+       display: block;
+    }
 }
 
-.primary-nav ul li:first-child{
+.primary-nav ul li:first-child {
     margin-left:0;
 }
 
-.primary-nav ul li a{
-    color:#999;
+.primary-nav ul li a {
+    color:#0a6599;
     cursor: pointer;
     text-decoration: none;
 }
 
-.primary-nav ul li a:hover{
+.primary-nav ul li a:hover {
     color:#111;
 }
 
-.primary-nav-pull-right{
-    float:right;
+.primary-nav-pull-right {
+    float:none;
 }
+@media(min-width:530px) {
+    .primary-nav-pull-right {
+        float:right;
+    }
+}
+
 .site-header-menu-content{
-    display:none;
+    opacity: 0;
+    padding-top:60px;
+    transform: scale(1.3);
+    transition: all .3s ease-out;
+     -webkit-transition: opacity .3s ease-out;
+     -moz-transition: opacity .3s ease-out;
+    z-index: -10;
+    position: relative;
+    
 }
 @media(min-width: 530px){
     .site-header-menu-content {
-        display:block;
+        opacity:1;
+        z-index: 1;
+        padding-top:0;
+        transform: scale(1);
+        
     }
+}
+
+.site-header-menu-icon{
+    width:20px;
+    height:19px;
+    position: absolute;
+    top:10px;
+    right:18px;
+    cursor: pointer;
+    z-index: 40;
+}
+.site-header-menu-icon-middle{
+    position: absolute;
+    top:8px;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color: #0a6599;
+    transition: all .3s ease-out;
+    transform-origin: 0 50%;
+}
+.site-header-menu-icon-top{
+    position: absolute;
+    top:0;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color:#0a6599;
+    transform-origin: 0 0;
+    transition: transform .3s ease-out;
+}
+.site-header-menu-icon-bottom{
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color:#0a6599;
+    transform-origin: 0 100%;
+     transition: transform .3s ease-out;
+}
+
+@media(min-width: 530px){
+    .site-header-menu-icon{
+        display: none;
+    }
+}
+
+.site-header-menu-icon-close-x .site-header-menu-icon-top{
+    transform: rotate(45deg) scaleX(1.25);
+}
+.site-header-menu-icon-close-x .site-header-menu-icon-bottom{
+     transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+}
+.site-header-menu-icon-close-x .site-header-menu-icon-middle{
+    opacity: 0;
+    transform: scaleX(0)
+}
+
+.site-header-menu-content-is-visible{
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1);
 }
 
 .site-logo{
     background: #0a6599;
-    padding: 5px;
-    border-radius: 0 0 10px 10px;
-    padding:25px 36px;
+    padding:15px;
     position: absolute;
-    top: 0;
+    top: -11px;
     left:50%;
     transform:translateX(-50%) scale(.7);
-    transform-origin: 50% 0%;
 }
 @media(min-width: 530px){
     .site-logo{
         left:auto;
         transform:translateX(0) scale(1);
+         -webkit-transform:translateX(0) scale(1);
+         -moz-transform:translateX(0) scale(1);
     }
 }
 
@@ -138,16 +251,50 @@ a h4 {
     top: 0;
     left: 0;
     width: 100%;
-    padding-bottom:15px;
-    box-shadow: 0 2px 2px #dddddd;
-       background-color: rgba(255, 255, 255, 0.98);
     z-index: 100;
+    transform: translateZ(0)
     -webkit-transform: translateZ(0);
+    -moz-transform:translateZ(0);
+     transition: background-color .3s ease-out;
+    -webkit-transition: background-color .3s ease-out;
+    -moz-transition: background-color .3s ease-out;
+    
+}
+@media(min-width:530px){
+    .sticky {
+        background-color: rgba(238, 238, 238, 1);
+    }
 }
 
-.sticky .primary-nav-pull-right ul{
-    float:right;
+.sticky .primary-nav{
+    text-align: center;
 }
+@media(min-width:530px) {
+    .sticky .primary-nav {
+        text-align: none;
+    }
+}
+
+.sticky.site-header-is-expanded{
+    background-color:rgba(112, 201, 242, .7);
+}
+
+@media(min-width:530px){
+    .sticky.site-header-is-expanded{
+        background:#eee;
+    }
+}
+
+/*.sticky .site-logo{
+    -webkit-transform: translateX(-50%) scale(.6);
+    transition: -webkit-transform .3s ease-out;
+    -webkit-transform-origin: 50% 0;
+    transition: transform .3s ease-out;
+    transition: transform .3s ease-out,-webkit-transform .3s ease-out;  
+    transform-origin: 50% 0;
+}*/
+
+
 
 /*#############################################*/
 /*                  hero slider              */
@@ -395,16 +542,16 @@ a h4 {
 /*                media query                  */
 /*#############################################*/
 /*small screen*/
-@media(min-width: 530px){
-.row-large-4{
-    float:left;
-    width:33.33%;
-}
+@media(min-width: 530px) {
+    .row-large-4 {
+        float:left;
+        width:33.33%;
+    }
 
-.row-large-12{
-    width:50%;
-}
-      
+    .row-large-12 {
+        width:50%;
+    }
+
 }
 /*medium screen*/
 @media(min-width: 800px){
@@ -470,15 +617,6 @@ a h4 {
 }
 /*large large*/
 @media(min-width: 1200px){
-      .sticky .site-logo{
-        margin-left:0;
-    }
-    .sticky .main-nav{
-        margin-right:0;
-    }
-    
-    .sticky .sticky-nav {
-        width: 1200px;
-    }
+   
 
 }
