--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -19,9 +19,6 @@ body {
     box-sizing: border-box;
 }
 
-*ul {
-    list-style: none;
-}
 
 a {
     color:#36c;
@@ -39,12 +36,8 @@ a h4 {
     color:#555;
     text-decoration: none;
 }
-.img-responsive{
-    display: block;
-    height: auto;
-    max-width: 100%;
-}
-.clear-both{
+
+.clear-both {
     content: "";
     clear: both;
     display: table;
@@ -64,44 +57,192 @@ a h4 {
 /*#############################################*/
 /*                  header                     */
 /*#############################################*/
-.header{
-    border-bottom:1px solid #e7e7e7;
-    width:100%;
-    height:8vh;
-}
 .site-header{
+    width:100%;
     position: relative;
-    background-color:#FFF;
-    min-height: 50px;
+    transition: background-color .6s ease-out;
+    -webkit-transition: background-color .6s ease-out;
+    -moz-transition: background-color .6s ease-out;
+}
+@media(min-width:530px){
+    .site-header{
+        background-color: #eee;
+    }
+}
+.site-header-is-expanded{
+    background-color:rgba(112, 201, 242, .8);
+}
+@media(min-width:530px){
+    .site-header-is-expanded {
+        background-color:#eee;
+    }
+}
+.site-header-is-expanded .primary-nav ul li a{
+    color:#0c2b3a;
+}
+.site-header-is-expanded .primary-nav ul li a:hover{
+    color:#1c5a78;
+}
+
+@media(min-width: 800px){
+    .site-header{
+        height:5vh;
+    }
+}
+
+.primary-nav{
+    position: relative;
     margin-bottom:15px;
-    padding-top:10px;
-    margin-top:0;
     font-weight: 300;
-    
+    text-align: center;
 }
-.site-header ul.main-nav{
+@media(min-width:530px){
+    .primary-nav{
+        margin-top:0;
+        margin-bottom:0;
+        text-align: none;
+    }
+}
+
+.primary-nav ul{
     list-style: none;
+    margin-top:10px;
 }
-.site-header ul.main-nav{
-    float:right;
-    padding-top:15px;
-}
-.site-header ul.main-nav a{
-     color:#999;
-    cursor: pointer;
-}
-.site-header ul.main-nav a:hover{
-     color:#111;
-}
-.site-header ul.main-nav li{
-    float:left;
+
+.primary-nav ul li{
     margin-left:15px;
-   
+    display: inline-block;
 }
-.site-header ul.main-nav li:first-child {
+@media(min-width:530px) {
+   .primary-nav ul li {
+       float:left;
+       display: block;
+    }
+}
+
+.primary-nav ul li:first-child {
     margin-left:0;
 }
 
+.primary-nav ul li a {
+    color:#0a6599;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.primary-nav ul li a:hover {
+    color:#111;
+}
+
+.primary-nav-pull-right {
+    float:none;
+}
+@media(min-width:530px) {
+    .primary-nav-pull-right {
+        float:right;
+    }
+}
+
+.site-header-menu-content{
+    opacity: 0;
+    padding-top:60px;
+    transform: scale(1.3);
+    transition: all .3s ease-out;
+     -webkit-transition: opacity .3s ease-out;
+     -moz-transition: opacity .3s ease-out;
+    z-index: -10;
+    position: relative;
+    
+}
+@media(min-width: 530px){
+    .site-header-menu-content {
+        opacity:1;
+        z-index: 1;
+        padding-top:0;
+        transform: scale(1);
+        
+    }
+}
+
+.site-header-menu-icon{
+    width:20px;
+    height:19px;
+    position: absolute;
+    top:10px;
+    right:18px;
+    cursor: pointer;
+    z-index: 40;
+}
+.site-header-menu-icon-middle{
+    position: absolute;
+    top:8px;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color: #0a6599;
+    transition: all .3s ease-out;
+    transform-origin: 0 50%;
+}
+.site-header-menu-icon-top{
+    position: absolute;
+    top:0;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color:#0a6599;
+    transform-origin: 0 0;
+    transition: transform .3s ease-out;
+}
+.site-header-menu-icon-bottom{
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:20px;
+    height:3px;
+    background-color:#0a6599;
+    transform-origin: 0 100%;
+     transition: transform .3s ease-out;
+}
+
+@media(min-width: 530px){
+    .site-header-menu-icon{
+        display: none;
+    }
+}
+
+.site-header-menu-icon-close-x .site-header-menu-icon-top{
+    transform: rotate(45deg) scaleX(1.25);
+}
+.site-header-menu-icon-close-x .site-header-menu-icon-bottom{
+     transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+}
+.site-header-menu-icon-close-x .site-header-menu-icon-middle{
+    opacity: 0;
+    transform: scaleX(0)
+}
+
+.site-header-menu-content-is-visible{
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1);
+}
+
+.site-logo{
+    background: #0a6599;
+    padding:15px;
+    position: absolute;
+    top: -11px;
+    left:50%;
+    transform:translateX(-50%) scale(.7);
+}
+@media(min-width: 530px){
+    .site-logo{
+        left:auto;
+        transform:translateX(0) scale(1);
+         -webkit-transform:translateX(0) scale(1);
+         -moz-transform:translateX(0) scale(1);
+    }
+}
 
 
 /*sticky header*/
@@ -110,23 +251,50 @@ a h4 {
     top: 0;
     left: 0;
     width: 100%;
-    padding-bottom:15px;
-    box-shadow: 0 2px 2px #dddddd;
-       background-color: rgba(255, 255, 255, 0.98);
     z-index: 100;
+    transform: translateZ(0)
     -webkit-transform: translateZ(0);
+    -moz-transform:translateZ(0);
+     transition: background-color .3s ease-out;
+    -webkit-transition: background-color .3s ease-out;
+    -moz-transition: background-color .3s ease-out;
+    
 }
-.sticky .site-logo{
-    margin-left:15px;
-}
-.sticky .main-nav{
-    margin-right:20px;
+@media(min-width:530px){
+    .sticky {
+        background-color: rgba(238, 238, 238, 1);
+    }
 }
 
-.sticky .sticky-nav{
-    margin:0 auto;
-    width:100%;
+.sticky .primary-nav{
+    text-align: center;
 }
+@media(min-width:530px) {
+    .sticky .primary-nav {
+        text-align: none;
+    }
+}
+
+.sticky.site-header-is-expanded{
+    background-color:rgba(112, 201, 242, .7);
+}
+
+@media(min-width:530px){
+    .sticky.site-header-is-expanded{
+        background:#eee;
+    }
+}
+
+/*.sticky .site-logo{
+    -webkit-transform: translateX(-50%) scale(.6);
+    transition: -webkit-transform .3s ease-out;
+    -webkit-transform-origin: 50% 0;
+    transition: transform .3s ease-out;
+    transition: transform .3s ease-out,-webkit-transform .3s ease-out;  
+    transform-origin: 50% 0;
+}*/
+
+
 
 /*#############################################*/
 /*                  hero slider              */
@@ -245,12 +413,22 @@ a h4 {
 .modal-content{
     width:100%;
     padding:15px;
-    height:900px;
-    overflow-y:scroll;
+    height:560px;
+    overflow:scroll;
     color:#FFFFFF;
     padding-bottom:15px;
-    padding-top:15px;
+    padding-top:15px;}
+
+@media(min-width: 530px){
+.modal-content{
+   padding-top:40px;
 }
+@media(min-width: 800px){
+    .modal-content{
+        height:900px;
+    }
+}
+    
 .modal-content h2{
     border-bottom:2px solid #66ccff;
     margin-bottom:10px;
@@ -364,25 +542,19 @@ a h4 {
 /*                media query                  */
 /*#############################################*/
 /*small screen*/
-@media(min-width: 530px){
-   .modal-content{
-        height:1000px;
-       padding-top:40px;
-
-    }
-    .row-large-4{
+@media(min-width: 530px) {
+    .row-large-4 {
         float:left;
         width:33.33%;
     }
-    
-    .row-large-12{
+
+    .row-large-12 {
         width:50%;
     }
-      
+
 }
 /*medium screen*/
 @media(min-width: 800px){
-
     .row-large-1{
         float:left;
         width:8.33%;
@@ -445,15 +617,6 @@ a h4 {
 }
 /*large large*/
 @media(min-width: 1200px){
-      .sticky .site-logo{
-        margin-left:0;
-    }
-    .sticky .main-nav{
-        margin-right:0;
-    }
-    
-    .sticky .sticky-nav {
-        width: 1200px;
-    }
+   
 
 }
